--- a/Rental/Rental.csproj
+++ b/Rental/Rental.csproj
@@ -260,6 +260,12 @@
     <Compile Include="View\list item\UserControl1.Designer.cs">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\SewaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SewaForm.Designer.cs">
+      <DependentUpon>SewaForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -277,6 +283,9 @@
     </Compile>
     <EmbeddedResource Include="View\list item\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SewaForm.resx">
+      <DependentUpon>SewaForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
