--- a/Rental/Rental.csproj
+++ b/Rental/Rental.csproj
@@ -63,6 +63,9 @@
     <Reference Include="RestSharp, Version=100.0.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharpSigned.105.2.3\lib\net46\RestSharp.dll</HintPath>
     </Reference>
+    <Reference Include="SQLitePCLRaw.core, Version=2.1.7.2151, Culture=neutral, PublicKeyToken=1488e028ca7ab535, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.core.2.1.7\lib\netstandard2.0\SQLitePCLRaw.core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -254,6 +257,24 @@
     <Compile Include="Model\Repository\RepoUser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Form3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Form3.Designer.cs">
+      <DependentUpon>Form3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\formkeranjang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\formkeranjang.Designer.cs">
+      <DependentUpon>formkeranjang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\list item\listKeranjang.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\list item\listKeranjang.Designer.cs">
+      <DependentUpon>listKeranjang.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\list item\UserControl1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -281,6 +302,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\formkeranjang.resx">
+      <DependentUpon>formkeranjang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\list item\listKeranjang.resx">
+      <DependentUpon>listKeranjang.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\list item\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
