Fitur user komplit

--- a/Rental/Rental.csproj
+++ b/Rental/Rental.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controler\ConLogin.cs" />
     <Compile Include="Controler\ConTrasaksi.cs" />
     <Compile Include="Model\Entity\Login.cs" />
+    <Compile Include="Model\Entity\TransaksiDanKendaraan.cs" />
     <Compile Include="View\admin.cs">
       <SubType>Form</SubType>
     </Compile>
