--- a/Rental/Rental.csproj
+++ b/Rental/Rental.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="View\formkeranjang.resx">
       <DependentUpon>formkeranjang.cs</DependentUpon>
@@ -388,6 +389,7 @@
     <Content Include="Assetimg\aset %286%29.png" />
     <Content Include="Assetimg\aset %287%29.png" />
     <Content Include="Assetimg\aset.png" />
+    <None Include="Resources\add file rounded.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.4.0.2\build\Fody.targets" Condition="Exists('..\packages\Fody.4.0.2\build\Fody.targets')" />
